Fix for overflowing width articles on mobile

--- a/src/app/news/game-news-list/game-news-list.component.css
+++ b/src/app/news/game-news-list/game-news-list.component.css
@@ -35,3 +35,7 @@ aside {
     overflow-y: auto;
     overflow-x: hidden;
 }
+
+#article-container {
+    width: 100%;
+}
